--- a/stl_amz.css
+++ b/stl_amz.css
@@ -35,7 +35,7 @@ main {
 }
 
 .logo {
-    background-image: url("/Shivam-6383.github.io/.gitignore/logo2.jpg");
+    background-image: url("/Shivam-6383.github.io/logo2.jpg");
     height: 50px;
     width: 100%;
     background-size:cover;
@@ -187,7 +187,7 @@ main {
 .hero-sec {
     height: 780px;
     width: 100vw;
-    background-image: url("/Shivam-6383.github.io/.gitignore/BGimg.jpg");
+    background-image: url("/Shivam-6383.github.io/BGimg.jpg");
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -287,35 +287,35 @@ main {
 }
 
 .shop-img1 {
-    background-image: url("/Shivam-6383.github.io/.gitignore/med.jpg")
+    background-image: url("/Shivam-6383.github.io/med.jpg")
 }
 
 .shop-img2 {
-    background-image: url("/Shivam-6383.github.io/.gitignore/fsh.jpg")
+    background-image: url("/Shivam-6383.github.io/fsh.jpg")
 }
 
 .shop-img3 {
-    background-image: url("/Shivam-6383.github.io/.gitignore/fur.jpg")
+    background-image: url("/Shivam-6383.github.io/fur.jpg")
 }
 
 .shop-img4 {
-    background-image: url("/Shivam-6383.github.io/.gitignore/mob.jpg")
+    background-image: url("/Shivam-6383.github.io/mob.jpg")
 }
 
 .shop-img5 {
-    background-image: url("/Shivam-6383.github.io/.gitignore/kit.jpg")
+    background-image: url("/Shivam-6383.github.io/kit.jpg")
 }
 
 .shop-img6 {
-    background-image: url("/Shivam-6383.github.io/.gitignore/pets.jpg")
+    background-image: url("/Shivam-6383.github.io/pets.jpg")
 }
 
 .shop-img7 {
-    background-image: url("/Shivam-6383.github.io/.gitignore/drw.jpg")
+    background-image: url("/Shivam-6383.github.io/drw.jpg")
 }
 
 .shop-img8 {
-    background-image: url("/Shivam-6383.github.io/.gitignore/gym.jpg")
+    background-image: url("/Shivam-6383.github.io/gym.jpg")
 }
 
 /*--- footer---*/
