--- a/stl_index.css
+++ b/stl_index.css
@@ -35,10 +35,10 @@ main {
 }
 
 .logo {
-    background-image: url("/Shivam-6383.github.io/logo2.jpg");
+    background-image: url("./logo2.jpg");
     height: 50px;
     width: 100%;
-    background-size:cover;
+    background-size: cover;
 }
 
 .border {
@@ -187,7 +187,7 @@ main {
 .hero-sec {
     height: 780px;
     width: 100vw;
-    background-image: url("/Shivam-6383.github.io/BGimg.jpg");
+    background-image: url("./BGimg.jpg");
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -287,35 +287,35 @@ main {
 }
 
 .shop-img1 {
-    background-image: url("/Shivam-6383.github.io/med.jpg")
+    background-image: url("./med.jpg")
 }
 
 .shop-img2 {
-    background-image: url("/Shivam-6383.github.io/fsh.jpg")
+    background-image: url("./fsh.jpg")
 }
 
 .shop-img3 {
-    background-image: url("/Shivam-6383.github.io/fur.jpg")
+    background-image: url("./fur.jpg")
 }
 
 .shop-img4 {
-    background-image: url("/Shivam-6383.github.io/mob.jpg")
+    background-image: url("./mob.jpg")
 }
 
 .shop-img5 {
-    background-image: url("/Shivam-6383.github.io/kit.jpg")
+    background-image: url("./kit.jpg")
 }
 
 .shop-img6 {
-    background-image: url("/Shivam-6383.github.io/pets.jpg")
+    background-image: url("./pets.jpg")
 }
 
 .shop-img7 {
-    background-image: url("/Shivam-6383.github.io/drw.jpg")
+    background-image: url("./drw.jpg")
 }
 
 .shop-img8 {
-    background-image: url("/Shivam-6383.github.io/gym.jpg")
+    background-image: url("./gym.jpg")
 }
 
 /*--- footer---*/
