--- a/stl_index.css
+++ b/stl_index.css
@@ -1,11 +1,12 @@
 * {
-    margin: 0px;
+    margin: 0;
     font-family: arial;
     text-transform: capitalize;
     border: border-box;
     border: none;
     transition: all 0.7s ease-out;
 }
+
 
 a {
     text-decoration: none;
@@ -17,7 +18,7 @@ main {
 }
 
 .nav-bar {
-    height: 60px;
+    height: 3.75rem;
     background-color: #0f1111;
     color: white;
     display: flex;
@@ -26,29 +27,29 @@ main {
 }
 
 .nav-logo {
-    height: 50px;
-    width: 100px;
+    height: 3.125rem;
+    width: 6.25rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 10px;
+    margin-left: 0.625rem;
 }
 
 .logo {
     background-image: url("./logo2.jpg");
-    height: 50px;
+    height: 3.125rem;
     width: 100%;
     background-size: cover;
 }
 
 .border {
-    border: 1.8px solid transparent;
-    border-radius: 10px;
+    border: 0.1125rem solid transparent;
+    border-radius: 0.625rem;
 }
 
 .border:hover {
-    border: 1.8px solid white;
-    border-radius: 4px;
+    border: 0.1125rem solid white;
+    border-radius: 0.25rem;
     transition: all 0.001s ease;
 }
 
@@ -62,7 +63,7 @@ main {
 .a1 {
     color: #cccccc;
     font-size: 0.8rem;
-    margin-left: 20px;
+    margin-left: 1.25rem;
 }
 
 .a {
@@ -73,33 +74,33 @@ main {
 /* -- box 3 --*/
 .nav-search {
     display: flex;
-    height: 40px;
+    height: 2.5rem;
     width: 50vw;
-    border-radius: 5px;
+    border-radius: 0.3125rem;
     justify-content: space-between;
     border: none;
 }
 
 .nav-search :hover {
-    border: 4px solid #febd68;
-    box-shadow: -5px 5px 5px gray;
+    border: 0.25rem solid #febd68;
+    box-shadow: -0.3125rem 0.3125rem 0.3125rem gray;
     transition: all 0.001s ease;
 }
 
 .sec-select {
     background-color: #f3f3f3;
-    width: 50px;
+    width: 3.125rem;
     text-align: left;
     text-transform: capitalize;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+    border-top-left-radius: 0.3125rem;
+    border-bottom-left-radius: 0.3125rem;
     border: none;
     background-color: #e6e6e6;
 }
 
 .sec-select option {
     background-color: white;
-    font-size: 15px;
+    font-size: 0.9375rem;
     font-weight: 300;
 }
 
@@ -109,14 +110,14 @@ main {
 }
 
 .sec-icon {
-    width: 45px;
+    width: 2.8125rem;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #febd68;
     color: #0f1111;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
+    border-top-right-radius: 0.3125rem;
+    border-bottom-right-radius: 0.3125rem;
     font-size: 1.2rem;
 }
 
@@ -144,17 +145,17 @@ main {
 .nav-cart {
     font-size: 0.85rem;
     font-weight: 700;
-    margin-right: 15px;
+    margin-right: 0.9375rem;
 }
 
 .nav-cart i {
-    font-size: 35px;
+    font-size: 2.1875rem;
 }
 
 
 /*---PANEL----*/
 .panel {
-    height: 40px;
+    height: 2.5rem;
     background-color: #222f3d;
     display: flex;
     color: white;
@@ -163,13 +164,13 @@ main {
 }
 
 .pan-all {
-    margin-left: 15px;
+    margin-left: 0.9375rem;
 }
 
 .pan-opt a {
     display: inline-block;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 0.625rem;
+    margin-right: 0.625rem;
 }
 
 .pan-opt {
@@ -180,12 +181,12 @@ main {
 .pan-deals {
     font-size: 0.9rem;
     font-weight: 700;
-    margin-right: 15px;
+    margin-right: 0.9375rem;
 }
 
 /* ---HERO SECTION --*/
 .hero-sec {
-    height: 780px;
+    height: 48.75rem;
     width: 100vw;
     background-image: url("./BGimg.jpg");
     background-size: cover;
@@ -200,21 +201,21 @@ main {
     /* background: transparent;
     backdrop-filter: blur(10px); */
     font-weight: 500;
-    height: 40px;
+    height: 2.5rem;
     width: 90vw;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 0.85rem;
     position: absolute;
-    top: 410px;
+    top: 25.625rem;
 
 }
 
 .hero-msg a {
     color: #f6f2f7;
     text-decoration: none;
-    margin-left: 8px;
+    margin-left: 0.5rem;
 }
 
 
@@ -224,7 +225,7 @@ main {
     display: flex;
     justify-content: space-evenly;
     position: absolute;
-    top: 480px;
+    top: 30rem;
     background-color: #e2e7e6;
     background: transparent;
     backdrop-filter: blur(10px);
@@ -235,16 +236,16 @@ main {
     display: flex;
     justify-content: space-evenly;
     position: absolute;
-    top: 900px;
+    top: 56.25rem;
     background-color: #e2e7e6;
 
 }
 
 
 .box {
-    height: 400px;
+    height: 25rem;
     margin: 1rem 1rem 1rem 1rem;
-    width: 350px;
+    width: 21.875rem;
     background-color: rgba(255, 255, 255, 0.82);
 }
 
@@ -280,8 +281,8 @@ main {
 }
 
 .simg {
-    height: 300px;
-    width: 320px;
+    height: 18.75rem;
+    width: 20rem;
     background-size: cover;
     margin: 1rem
 }
@@ -321,14 +322,14 @@ main {
 /*--- footer---*/
 
 footer {
-    margin-top: 20px;
+    margin-top: 1.25rem;
     position: absolute;
-    top: 1320px;
+    top: 82.5rem;
 }
 
 .foot-p1 {
     background-color: #37475a;
-    height: 50px;
+    height: 3.125rem;
     width: 100vw;
     display: flex;
     justify-content: center;
@@ -345,29 +346,29 @@ footer {
     background-color: #232F3E;
     display: flex;
     justify-content: space-evenly;
-    height: 400px;
+    height: 25rem;
 }
 
 .foot-p2 p {
-    font-size: 16px;
+    font-size: 1rem;
     color: white;
     font-weight: 600;
 }
 
 .foot-p2 a {
-    font-size: 14px;
+    font-size: 0.875rem;
     color: rgb(221, 221, 221);
     display: block;
-    margin-top: 10px;
+    margin-top: 0.625rem;
 }
 
 .foot-p2 ul {
-    margin-top: 40px;
+    margin-top: 2.5rem;
 }
 
 .foot-p3 {
-    border-top: 0.5px solid rgba(255, 255, 255, 0.5);
-    height: 70px;
+    border-top: 0.03125rem solid rgba(255, 255, 255, 0.5);
+    height: 4.375rem;
     width: 100vw;
     color: white;
     background-color: #232F3E;
@@ -377,25 +378,25 @@ footer {
 }
 
 .ind {
-    border: 1px solid white;
-    border-radius: 5px;
-    width: 80px;
-    height: 30px;
+    border: 0.0625rem solid white;
+    border-radius: 0.3125rem;
+    width: 5rem;
+    height: 1.875rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 25px;
+    margin: 1.5625rem;
 }
 
 #iflag {
-    height: 15px;
-    width: 22.5px;
-    margin-right: 5px;
-    margin-left: 3px;
+    height: 0.9375rem;
+    width: 1.40625rem;
+    margin-right: 0.3125rem;
+    margin-left: 0.1875rem;
 }
 
 .foot-p4 {
-    height: 75px;
+    height: 4.6875rem;
     width: 100vw;
     background-color: #0f1111;
     color: white;
@@ -406,13 +407,18 @@ footer {
 .pages {
     display: block;
 
-    padding-top: 25px;
+    padding-top: 1.5625rem;
 }
 
 .pages a {
-    margin: 10px;
+    margin: 0.625rem;
 }
 
 .cpyr {
-    padding-top: 5px;
+    padding-top: 0.3125rem;
 }
+
+.phone {
+    visibility: hidden;
+}
+
