--- a/stl_signin.css
+++ b/stl_signin.css
@@ -1,7 +1,7 @@
 * {
-    margin: 0px;
+    margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    line-height: 22px;
+    line-height: 1.375rem;
 }
 
 body {
@@ -12,59 +12,59 @@ body {
 
 /* logo */
 .amzlogo {
-    height: 70px;
-    width: 250px;
+    height: 4.375rem;
+    width: 15.625rem;
     background-image: url("/project-any-website-cloning-using-html-and-css-Shivam-6383/.gitignore/wlogo.jpg");
     background-size: cover;
-    margin-top: 20px;
-    margin-bottom: 10px;
+    margin-top: 1.25rem;
+    margin-bottom: 0.625rem;
 }
 
 /* main body */
 .main {
-    height: 350px;
-    width: 305px;
-    padding: 20px 26px 20px 26px;
-    border: 1px solid rgba(128, 128, 128, 0.388);
-    border-radius: 10px;
+    height: 21.875rem;
+    width: 19.0625rem;
+    padding: 1.25rem 1.625rem 1.25rem 1.625rem;
+    border: 0.0625rem solid rgba(128, 128, 128, 0.388);
+    border-radius: 0.625rem;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 .main h1 {
-    height: 30px;
-    width: 296px;
-    font-size: 22px;
+    height: 1.875rem;
+    width: 18.5rem;
+    font-size: 1.375rem;
     font-family: arial;
     color: #0f1111;
     font-weight: 300;
-    margin-top: 5px;
+    margin-top: 0.3125rem;
 }
 
 .p1 {
-    height: 20px;
-    width: 296px;
+    height: 1.25rem;
+    width: 18.5rem;
     color: #0f1111;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 600;
-    margin-top: 15px;
+    margin-top: 0.9375rem;
 }
 
 #input {
-    height: 32px;
-    width: 275px;
-    padding: 1px 6px;
-    margin-top: 5px;
+    height: 2rem;
+    width: 17.1875rem;
+    padding: 0.0625rem 0.375rem;
+    margin-top: 0.3125rem;
 }
 
 button {
-    height: 32px;
-    width: 294px;
-    font-size: 16px;
+    height: 2rem;
+    width: 18.375rem;
+    font-size: 1rem;
     background-color: #febd68;
-    border: 1px solid transparent;
-    margin-top: 10px;
+    border: 0.0625rem solid transparent;
+    margin-top: 0.625rem;
     border-radius: 50px;
 }
 
@@ -75,65 +75,68 @@ form {
 
 /* link section of main block*/
 .p2 {
-    height: 32px;
+    height: 2rem;
     width: 100%;
-    margin: 20px 0px;
-    font-size: 15px;
+    margin: 1.25rem 0;
+    font-size: 0.9375rem;
     color: #0f1111;
 }
 
 .p3 {
-    height: 20px;
-    width: 100%px;
-    margin-bottom: 30px;
+    height: 1.25rem;
+    width: 100%;
+    margin-bottom: 1.875rem;
 }
 
 .p3 a {
-    height: 17px;
-    width: 70px;
-    font-size: 16px;
+    height: 1.0625rem;
+    width: 4.375rem;
+    font-size: 1rem;
     color: #2162A1;
     text-decoration: none;
-    position: relative;
-    right: 110px;
+
 }
 
 .buss {
-    height: 60px;
+    height: 3.75rem;
     width: 100%;
-    margin-top: 0px;
+    margin-top: 0;
 }
 
 .buss h4 {
-    margin: 20px 0px 10px 0px;
+    margin: 1.25rem 0 0.625rem 0;
     color: #0f1111;
 }
+
 .p4 {
-    height: 17px;
-    width: 100%px;
+    height: 1.0625rem;
+    width: 100%;
 }
+
 .p4 a {
-    text-decoration: none ;
+    text-decoration: none;
     color: #2162A1;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 /* footer part */
 footer {
-    margin: 50px 0px 24px;
-    height: 74px;
+    margin: 3.125rem 0 1.5rem;
+    height: 4.625rem;
     width: 100vw;
-     font-size: 13px;
+    font-size: 0.8125rem;
     text-align: center;
     align-content: center;
 }
+
 .link {
-    margin: 20px 0px 10px 0px;
+    margin: 1.25rem 0 0.625rem 0;
 }
+
 footer a {
-    font-size: 12px;
-    margin-left: 20px;
+    font-size: 0.75rem;
+    margin-left: 1.25rem;
     text-decoration: none;
-    font-size:16px;
+    font-size: 1rem;
     color: #2162A1;
 }
